sandbox/output
StringCalculatorTest.java:55: error: method add_with_delimiter_negative() is already defined in class StringCalculatorTest
    public void add_with_delimiter_negative() {
                ^
1 error
